adding header elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <a href="other html page" class="view-high"> View Highscores </a>
+        <h2>Time: </h2>
+    </header>
     
 </body>
 </html>
