adding divs to html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 <body>
     <header>
         <a href="other html page" class="view-high"> View Highscores </a>
-        <h2>Time: </h2>
+        
+        <div class="Time"></div>
     </header>
-    
+
+    <main>
+        <div class="Title"></div>
+
+        <div class="Questions"></div>
+
+        <div class="finish"></div>
+    </main>
 </body>
 </html>
