adding html to title section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     </header>
 
     <main>
-        <div class="Title"></div>
+        <div class="Title">
+            <h1>Coding Quiz</h1>
+            <p>Try your best to answer the following questions on JavaScript within the given time! 
+                Answering wrong will result in a penalty on your score/time.</p>
+        </div>
 
         <div class="Questions"></div>
 
