--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <h1>Coding Quiz</h1>
             <p>Try your best to answer the following questions on JavaScript within the given time! 
                 Answering wrong will result in a penalty on your score/time.</p>
+            <button id="start">Start Quiz</button>
+
         </div>
 
         <div class="Questions"></div>
@@ -27,7 +29,7 @@
         <div class="finish"></div>
     </main>
 
-    <script src="script.js"></script>
-    
+    <script src="./assets/js/script.js"></script>
+
 </body>
 </html>
