added css for start page

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 </head>
 <body>
     <header>
-        <a href="other html page" class="view-high"> View Highscores </a>
+        <a href="other html page" id="view-high"> View Highscores </a>
         
         <div class="Time"></div>
     </header>
 
     <main>
-        <div class="Title">
+        <div class="title">
             <h1>Coding Quiz</h1>
             <p>Try your best to answer the following questions on JavaScript within the given time! 
-                Answering wrong will result in a penalty on your score/time.</p>
+                 Answering wrong will result in a penalty on your score/time.</p>
             <button id="start">Start Quiz</button>
 
         </div>
 
-        <div class="Questions"></div>
+        <div class="questions"></div>
 
         <div class="finish"></div>
     </main>
