--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <a href="other html page" id="view-high"> View Highscores </a>
         
         <div class="Time"></div>
+
     </header>
 
     <main>
-        <div class="title">
+        <div class="title-screen">
             <h1>Coding Quiz</h1>
             <p>Try your best to answer the following questions on JavaScript within the given time! 
                  Answering wrong will result in a penalty on your score/time.</p>
@@ -24,7 +25,7 @@
 
         </div>
 
-        <div class="questions"></div>
+        <div class="questions-screen"></div>
 
         <div class="finish"></div>
     </main>
