adding listener event for game start, game start element and start function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Coding Quiz</h1>
             <p>Try your best to answer the following questions on JavaScript within the given time! 
                  Answering wrong will result in a penalty on your score/time.</p>
-            <button id="start">Start Quiz</button>
+            <button id="start-Button">Start Quiz</button>
 
         </div>
 
