--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <div class="title-screen">
+        <div class="title-screen" data-state="visible">
             <h1>Coding Quiz</h1>
             <p>Try your best to answer the following questions on JavaScript within the given time! 
                  Answering wrong will result in a penalty on your score/time.</p>
