adding questions screen and its styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,24 @@
         </div>
 
         <div class="questions-screen"></div>
+            <h2 class="title">temp question</h2>
+                <ul>
+                    <li>
+                        <button class="questionBtn-1">temp answer</button>
+                    </li>
 
+                    <li>
+                     <button class="questionBtn-2">temp answer</button>
+                    </li>
+                    
+                    <li>
+                     <button class="questionBtn-3">temp answer</button>
+                    </li>
+
+                    <li>
+                     <button class="questionBtn-4">temp answer</button>
+                    </li>
+                 </ul>
         <div class="finish"></div>
     </main>
 
