--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <a href="other html page" id="view-high"> View Highscores </a>
         
-        <div class="Time"></div>
+        <div class="time"></div>
 
     </header>
 
