added 'this' to validation

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <h2 id="title"></h2>
             <ul>
                 <li>
-                    <button id="btn1"></button>
+                    <button id="1" ></button>
                 </li>
                 <li>
-                    <button id="btn2"></button>
+                    <button id="2" ></button>
                 </li>
                 <li>
-                    <button id="btn3"></button>
+                    <button id="3" ></button>
                 </li>
                 <li>
-                    <button id="btn4"></button>
+                    <button id="4" ></button>
                 </li>
                 
             </ul>
